added api layer and api tests
