# spec/openapi/p2p-wallet.yaml
@@ -183,8 +183,20 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ListWalletsResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '401':
           description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: Forbidden
           content:
             application/json:
               schema:
